(add): migrate to reactive programming in user and images